unpackaged/main/default/objects/OrderApi__Known_Address__c/OrderApi__Known_Address__c.object-meta.xml
<CustomObject>
    <description>Known Addresses allows Contacts and Accounts to have multiple related address records.</description>
    <label>Known Address</label>
    <nameField>
        <displayFormat>KA-{000000000}</displayFormat>
        <label>Known Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>