unpackaged/main/default/objects/OrderApi__Known_Address__c/fields/OrderApi__Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Additional_Details__c</fullName>
    <description>Any additional information about the Address (Buzz number, gate code, etc.)</description>
    <inlineHelpText>Any additional information about the Address (Buzz number, gate code, etc.)</inlineHelpText>
    <label>Additional Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>