unpackaged/main/default/objects/OrderApi__Known_Address__c/fields/OrderApi__City__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__City__c</fullName>
    <description>Address City</description>
    <inlineHelpText>Address City</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>