unpackaged/main/default/objects/OrderApi__Known_Address__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the known address to a contact.</description>
    <inlineHelpText>Relates the known address to a contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Known Addresses</relationshipLabel>
    <relationshipName>Known_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>