unpackaged/main/default/objects/OrderApi__Known_Address__c/fields/OrderApi__Country__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Country__c</fullName>
    <description>Address Country</description>
    <inlineHelpText>Address Country</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>