unpackaged/main/default/objects/OrderApi__Known_Address__c/fields/OrderApi__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this will be the pre-populated address when a user is checking out. Only one address
            can be checked for a contact at any given time.</description>
    <inlineHelpText>When checked, this will be the pre-populated address when a user is checking out. Only one
            address can be checked for a contact at any given time.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>