unpackaged/main/default/objects/OrderApi__Known_Address__c/fields/OrderApi__Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Name__c</fullName>
    <description>Name used as reference for this address.</description>
    <inlineHelpText>Name used as reference for this address.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>