unpackaged/main/default/objects/OrderApi__Known_Address__c/fields/OrderApi__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Postal_Code__c</fullName>
    <description>Address Zip/Postal Code</description>
    <inlineHelpText>Address Zip/Postal Code</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>