unpackaged/main/default/objects/OrderApi__Known_Address__c/fields/OrderApi__Province__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Province__c</fullName>
    <description>Address State</description>
    <inlineHelpText>Address State</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>