unpackaged/main/default/objects/OrderApi__Known_Address__c/fields/OrderApi__Street__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Street__c</fullName>
    <description>Address Street</description>
    <inlineHelpText>Address Street</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>